new data, inc upcoming picc gardens closure